# sauter-university-2025-challenge-adk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dev-trigger.yaml  extract.py  load.py  main.tf  pr-trigger.yaml  prod-trigger.yaml  requirements.txt  test_pipeline_integration.py  transform.py  variables.tf
Terraform/: .gitignore  README.md  main.tf
agentes_adk/: README.md
api/: Dockerfile  README.md
api/src/app/: pipeline_client.py  pyproject.toml  requirements.txt
api/src/app/routers/: data.py
api/src/app/services/: bigquery_service.py
api/src/app/utils/: logger.py
app/: dockerfile  main.py  requirements.txt
docs/: Documentação - equipe 6 - Desafio SAUTER University 2025.docx  WHY GOOGLE_.pptx
downloads/: EAR_Diario_por_Reservatorio-2000.parquet  EAR_Diario_por_Reservatorio-2001.parquet  EAR_Diario_por_Reservatorio-2002.parquet  EAR_Diario_por_Reservatorio-2003.parquet  EAR_Diario_por_Reservatorio-2004.parquet  EAR_Diario_por_Reservatorio-2005.parquet  EAR_Diario_por_Reservatorio-2006.parquet  EAR_Diario_por_Reservatorio-2007.parquet  EAR_Diario_por_Reservatorio-2008.parquet  EAR_Diario_por_Reservatorio-2009.parquet  EAR_Diario_por_Reservatorio-2010.parquet  EAR_Diario_por_Reservatorio-2011.parquet  EAR_Diario_por_Reservatorio-2012.parquet  EAR_Diario_por_Reservatorio-2013.parquet  EAR_Diario_por_Reservatorio-2014.parquet  EAR_Diario_por_Reservatorio-2015.parquet  EAR_Diario_por_Reservatorio-2016.parquet  EAR_Diario_por_Reservatorio-2017.parquet  EAR_Diario_por_Reservatorio-2018.parquet  EAR_Diario_por_Reservatorio-2019.parquet  (+6 more)
(+34 files in other folders)
