[project]
name = "reservatorios-api"
version = "1.0.0"
description = "API para disparo da pipeline e consulta de dados no BigQuery"
authors = [
    { name = "Seu Nome", email = "seu.email@exemplo.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "google-cloud-bigquery>=3.13.0",
    "google-cloud-storage>=3.2.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.2.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "pyarrow>=18.0.0"  # for parquet support
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev=["project"]
# ... outras configurações
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "python-dotenv",
    "tenacity",
    "google-cloud-bigquery",
    "requests"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"